<resources>
    <string name="app_name">MyPlayer</string>
    <string name="activity_login_forgot_your_password">Forgot your password?</string>
    <string name="activity_login_sign_with_a_social_account">Sign with a social account</string>
    <string name="activity_login_text_login_with_facebook">Login with Facebook</string>
    <string name="activity_login_login_with_twitter">Login with Twitter</string>
    <string name="activity_login_et_password">密码</string>
    <string name="activity_login_et_username">用户名</string>
</resources>