<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_login_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:src="@mipmap/easenet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_login_username"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="53dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@mipmap/rectangle_white"
        android:hint="@string/activity_login_et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_icon" />

    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@mipmap/rectangle_white"
        android:hint="@string/activity_login_et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_username" />

    <TextView
        android:id="@+id/activity_login_forget_password"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_forgot_your_password"
        android:textColor="#ff758692"
        android:textSize="14sp"
        android:layout_marginTop="17.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_password"/>

    <TextView
        android:id="@+id/activity_login_btn_login"
        android:layout_width="180dp"
        android:layout_height="44dp"
        android:background="@mipmap/buttons_fill_red"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_forget_password" />

    <ImageView
        android:id="@+id/activity_login_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:background="#fff7f8fa"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/activity_login_sign_with_a_social_account"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/activity_login_sign_with_a_social_account"
        android:textColor="#ff758692"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_login_bottom_view" />

    <TextView
        android:id="@+id/activity_login_btn_login_facebook"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="@string/activity_login_text_login_with_facebook"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@mipmap/rectangle_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_sign_with_a_social_account" />

    <TextView
        android:id="@+id/activity_login_btn_login_twitter"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:text="@string/activity_login_login_with_twitter"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:background="@mipmap/rectangle_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_btn_login_facebook" />


</androidx.constraintlayout.widget.ConstraintLayout>